tests/error/type_match/tuple_auto.bz
// error: expression type '[i32, void]' is not instantiable
// error: variable type '[i32, void]' is not instantiable
function test()
{
	let _: auto = [ 1, {} ];
}
